Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <li><strong>UGH SB</strong> – ₹999/month (Rent & Ride)</li>
     </ul>
 
-    <a href="https://forms.gle/9fDGdUf2V4GbbyiA9"
+    <a href="https://forms.gle/BXr5m445wtrkdMF98"
        class="btn-primary"
        style="margin-top:20px; display:inline-block;">
        Join Monthly
@@ -377,4 +377,5 @@
 <script src="script.js"></script>
 
 </body>
+
 </html>
